<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.first.FirstScreen">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/add_photo"
        android:contentDescription="@string/image_add_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="58dp"
        android:autofillHints="name"
        android:background="@drawable/bg_form"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login" />

    <EditText
        android:id="@+id/edit_palindrome_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/bg_form"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/palindrome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_name_login"
        app:layout_constraintStart_toStartOf="@+id/edit_name_login"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_btn"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_palindrome_login"
        app:layout_constraintStart_toStartOf="@+id/edit_palindrome_login"
        app:layout_constraintTop_toBottomOf="@+id/edit_palindrome_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_btn"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_check_login"
        app:layout_constraintStart_toStartOf="@+id/btn_check_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_check_login" />

</androidx.constraintlayout.widget.ConstraintLayout>